// UserService.proto
syntax = "proto3";
package grpc;

option java_multiple_files = true;
option java_package = "com.atto.grpc";
option java_outer_classname = "UserServiceOuterClass";

message User {
  int64 idx = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
}

message UserIdx {
  repeated int64 idx = 1;
}

service UserService {

  // Unary
  // Blocking, Async, Future
  rpc setUser(User) returns(UserIdx);
  rpc getUser(UserIdx) returns(User);

  // Server Streaming RPC (1:N)
  // Blocking, Async
  rpc getUsers(UserIdx) returns(stream User);

  // Client Streaming RPC (N:1)
  // Async Only
  rpc setUsers(stream User) returns(UserIdx);

  // Bidirectional Streaming RPC (N:N)
  // Async Only
  rpc getUsersRealtime(stream UserIdx) returns(stream User);
}
